Add ExtractTest and fix type of url output parameter